<resources>
    <string name="app_name">TimesheetApp</string>
    <string name="title_activity_timekeeper_list">Employee marks</string>
    <string name="title_activity_department_list">Departments</string>
    <string name="title_activity_employee_list">Employees</string>
    <string name="title_activity_timekeeper_add">Add mark</string>
    <string name="title_activity_timekeeper_calendar">Calendar</string>
    <string name="title_activity_department_add">Add department</string>
    <string name="title_activity_add_employee">Add employee</string>

    <string name="ok">OK</string>
    <string name="choose_role_text">Choose your role:</string>
    <string name="timekeeper">Timekeeper</string>
    <string name="department_administrator">Department administrator</string>
    <string name="employee_administrator">Employee administrator</string>
    <string name="field_department_name">Name:</string>
    <string name="default_font">sans-serif-light</string>
    <string name="department_load_fail">Failed to load departments!</string>
    <string name="department_add_error">Failed to add department.</string>
    <string name="add_employee_error">Failed to add employee.</string>
    <string name="employees_load_fail">Failed to load employees!</string>
    <string name="add_employee_success">Successfully added employee!</string>
    <string name="timekeeper_add_status_error">Failed to add employee status!</string>
    <string name="department_add_success">Successfully added department!</string>
    <string name="timekeeper_employee_load_fail">Failed to load employees status!</string>
    <string name="field_timekeeper_employee">Employee:</string>
    <string name="field_timekeeper_status">Status:</string>
    <string name="field_employee_first_name">First name:</string>
    <string name="field_employee_last_name">Last name:</string>
    <string name="field_employee_middle_name">Middle name:</string>
    <string name="field_employee_birth_date">Birth date (dd.mm.yyyy):</string>
    <string name="field_employee_department">Department:</string>
    <string name="field_employee_position">Position:</string>
    <string name="field_employee_address">Address:</string>
    <string name="field_employee_country">Country:</string>
    <string name="field_employee_city">City</string>
    <string name="field_employee_street">Street:</string>
    <string name="field_employee_house">House:</string>
    <string name="field_employee_flat">Flat:</string>
    <string name="field_employee_phone">Phone:</string>
    <string name="field_employee_select_date">Select</string>
    <string name="remove_item_fail">Failed to remove item!</string>
    <string name="title_activity_add_item">Edit</string>
    <string name="list_header_timekeeper_id">ID</string>
    <string name="list_header_timekeeper_name">Name</string>
    <string name="list_header_timekeeper_status">Status</string>
    <string name="list_header_employee_id">ID</string>
    <string name="list_header_employee_name">Name</string>
    <string name="list_header_department_id">ID</string>
    <string name="list_header_deparment_name">Name</string>
    <string name="title_activity_detail">Details</string>
    <string name="list_remove_success">Removed item!</string>

</resources>
