<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_first_name"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_first_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_last_name"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_last_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_middle_name"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_middle_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/employee_detail_birth_date_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:text="@string/field_employee_birth_date"/>

        <TextView
                android:id="@+id/employee_detail_birth_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_department"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_department_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_position"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_position_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fields_horizontal_margin"
            android:text="@string/field_employee_address"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_country"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_country_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_city"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_city_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_street"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_street_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_house"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_house_number_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_flat"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_flat_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fields_horizontal_margin"
            android:layout_marginBottom="@dimen/fields_vertical_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_employee_phone"
                android:layout_marginStart="@dimen/fields_horizontal_margin"/>

        <TextView
                android:id="@+id/employee_detail_phone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fields_horizontal_margin"
                android:layout_marginEnd="@dimen/fields_horizontal_margin"
                />
    </LinearLayout>
</LinearLayout>